shady-skin Revision History
----------------------------------

2016-05-28:
- Added Zapcockpit

2016-05-24:
- Added Italian translation (provided by fiveten_59@vdrportal)

2016-05-20:
- Changed position of marker for current and nextrecording in displaychannel

2016-05-19:
- Adjustments for timerstates in timermenus
- Added setup for number of devices in mainmenu
- Fixed empty cell for hostname in vdr's timermenu

2016-05-11:
- Reimplemented 'isRecording' and added 'current- and nextrecording' in displaychannel

2016-05-08:
- Fixes for epg2vdr and running timers

2016-05-03:
- Show even local hostname in epg2vdr-menu Timer

2016-05-02:
- Revoved some areascrolls in displaymenudefault
- Added setup for number of hostnamechars in epg2vdr-menu Timer
- Added separators in skinsetup for plugins

2016-04-27:
- Fixed scrollareas in displaymenutimer

2016-04-20:
- Added setup for epg2vdrShowHostname
- Added setup if skindesigner is patched for epg2vdr

2016-04-18:
- First steps with epg2vdr
- New icons for remote-timers

2016-04-10:
- Added lost equal sign and removed redundant whitespaces in tvguideng-root
- Optimized tablabels in detailviews
- Fixed position of scrollbar in displaymenutimers

2016-04-07:
- Added marker for switchtimer in tvguideng

2016-04-06:
- Enlarged size of posters in currentelements
- Added posterbackground in currentelements

2016-04-05:
- Unified currentelement of schedules, channels, recordings and timers
- Filled bottommost line of OSD with Black (workaround for?) 

2016-04-04:
- Added setup to show title and progressbar in active menuelement
- Added setup to show title and progressbar in active menuelement in displaymenuchannels

2016-04-02:
- Some fixes for numMenuItems < 13 

2016-03-29:
- Added optional bright cutmarks in displayreplay

2016-03-26:
- Some more stuff for plex II
- Added setup-submenu für pluginspecific settings

2016-03-11:
- First steps with plug-plex-detail

2016-03-06:
- Fixed bug in translation of setup-parameters
